# programming-learning-examples

./: .gitignore  README.md
C++/: README.md
C++/C_test/: CMakeLists.txt  ImageRectify.cpp  ImageRectify.h  STL_algorithm.cpp  STL_learning.cpp  ZJC.cpp  base_conversion.cpp  c++11_test.cpp  c_test.cpp  class_learning.cpp  data_structure.cpp  exception_learning.cpp  function_test.cpp  math_test.cpp  misc_learning.cpp  myfirst.cpp  myfirst.h  numerical_calculation.cpp  random_number_generator.cpp  read_file.cpp  rectify_image.cpp  stl_test.cpp  string_usages.cpp  temp_test.cpp  template_learning.cpp  time_util.cpp  time_utils.h  time_utils_test.cpp
C++/C_test/argument_parse/: README.md  module_argument.h  module_argument_main.cpp  opencv_argument_main.cpp
C++/C_test/c++11/: c++11_test.cpp
C++/C_test/class_examples/: CMakeLists.txt  class_inheritance.cpp
C++/C_test/data/: kitti_oxts.txt  result.txt  test.txt
C++/C_test/file_operations_collection/: CMakeLists.txt  directory_operation.cpp  file_util.cpp  file_util.h  file_util_main.cpp
C++/C_test/include_test/: anonymous_namespace1.h  anonymous_namespace2.h  anonymous_namespace_test.cpp  main.cpp  type_define.h  type_define2.h
C++/C_test/input_output_operations/: CMakeLists.txt  file_util.h  print_example.cpp
C++/C_test/macro_test/: CMakeLists.txt  class_define.h  macro_test.cpp
C++/C_test/utils/: CMakeLists.txt  my_assert.h  my_assert_test.cpp  string_utils.h
C++/cpp_library/: CMakeLists.txt
C++/cpp_library/dst_function/: CMakeLists.txt  dst_evidence.cpp  dst_existence_fusion.cpp
C++/cpp_library/geometry/: CMakeLists.txt  line_segment2d.cpp  line_segment2d.h  math_utils.cpp  math_utils.h  polygon2d.cpp  polygon2d.h  polygon2d_test.cpp  vec2d.cpp  vec2d.h
C++/cpp_tutorial/: CMakeLists.txt  base_conversion.cpp  basic_data_type.cpp  boost_signal.cpp  exception_learning.cpp  function_test.cpp  math_test.cpp  misc_learning.cpp  random_generator.cpp  shared_ptr_test.cpp  time_utils.h  time_utils_test.cpp
C++/cpp_tutorial/argument_parse/: CMakeLists.txt  module_argument.cpp
C++/cpp_tutorial/c++11/: CMakeLists.txt  c++11_test.cpp  functional_test.cpp  learn_template.cpp
C++/cpp_tutorial/class_examples/: class_inheritance.cpp
C++/cpp_tutorial/data/: file_test.txt  open.txt
C++/cpp_tutorial/include_test/: test.cpp  test1.cpp
C++/cpp_tutorial/input_output_operations/: CMakeLists.txt  directory_operation.cpp  file_util.cpp  file_util.h  file_util_main.cpp  read_csv_file.cpp  read_txt_file.cpp  read_txt_file2.cpp
C++/cpp_tutorial/logging/: CMakeLists.txt  logging_main.cpp
C++/cpp_tutorial/macro_test/: CMakeLists.txt  macro_define.h
C++/cpp_tutorial/macro_utils/: CMakeLists.txt  class_define.cpp  perf_util.cpp  perf_util.h  perf_util_test.cpp
C++/cpp_tutorial/stl/: CMakeLists.txt  README.md  STL_algorithm.cpp  STL_learning.cpp  stl_test.cpp  stl_util.h  vector_learning.cpp
C++/cpp_tutorial/utils/: CMakeLists.txt  my_assert.h  my_assert_test.cpp  string_usages.cpp  string_utils.cpp  string_utils.h  strnatcomp.h
C++/eigen_learning/: CMakeLists.txt  eigen_basic.cpp  eigen_matrix_operations.cpp  eigen_matrix_sort.cpp  eigen_test.cpp  geometric_operation.cpp
C++/matplotlib_cpp/: CMakeLists.txt  README.md
C++/matplotlib_cpp/examples/: basic.cpp
C++/misc_test/: CMakeLists.txt  parse_user_defined_yaml.cpp  yaml_cpp_test.cpp  yaml_test.yaml  yaml_test_vector.yaml
C++/misc_test/config/: config_manager.yaml
CMake_learning/example/: CMakeLists.txt  example_main.cpp
CMake_learning/learn_cmake_easily/find_package_learning/: CMakeLists.txt
OpenCV_learning/: CMakeLists.txt  color_manager.cpp  covariance.cpp  image_mask_test.cpp  image_operations.cpp  invisible_cloak.cpp  mat_learning.cpp  mouse_callback.cpp  tracker_bar.cpp  tracker_bar2.cpp
OpenCV_learning/basic_drawing/: CMakeLists.txt  geometry_drawing.cpp  mouse_callback.cpp  show_text.cpp
OpenCV_learning/scripts/: blend_images.ipynb  camera_utils.ipynb  combine_images.ipynb  create_show_image.py  draw_utils.ipynb  gen_binary_image.ipynb  geometry_utils.py  morpha_operations.ipynb  morpha_sequences.py  multi_image_ops.ipynb  vis_utils.py
OpenCV_learning/scripts/image_transform/: affine_transform.ipynb
OpenCV_learning/utils/: CMakeLists.txt  solve_function.cpp
PCL_learning/: .cproject  .project  CMakeLists.txt  cloud_clustering.cpp  cloud_extraction.cpp  euclidean_clustering.cpp  filter_cloud.cpp  kdtree_learning.cpp  pcl_template.cpp  pcl_transformation.cpp  registration.cpp  registration_continues.cpp  statistical_removal.cpp
PCL_learning/customized_point_type/: CMakeLists.txt  main.cpp  point_type_define_main.cpp
PCL_learning/data/: 1.pcd  10.pcd  11.pcd  119_4.pcd  12.pcd  13.pcd  14.pcd  15.pcd  2.pcd  3.pcd  4.pcd  5.pcd  test_simple.pcd  test_simple1.pcd
Qt_learning/qt_image_show/: CMakeLists.txt  helloworld.ui
ROS/: README.md
ROS/catkin_ws_basic/src/learning_param_config/: CMakeLists.txt  README.md  package.xml
ROS/catkin_ws_basic/src/learning_rviz/: CMakeLists.txt  README.md  package.xml
ROS/catkin_ws_basic/src/learning_tf/: CMakeLists.txt  package.xml
ROS/catkin_ws_basic/src/learning_tf2/: CMakeLists.txt  package.xml
ROS/catkin_ws_basic/src/ros_misc_test/: CMakeLists.txt  package.xml
ROS/catkin_ws_basic/src/ros_python_example/: CMakeLists.txt  README.md  package.xml  python_publisher.py
ROS/catkin_ws_perception/src/visualization_toolkit/: CMakeLists.txt  package.xml
ROS/catkin_ws_test/src/ego_pose_visualizer/: CMakeLists.txt  package.xml
cmake_learning/CMakeList_file_collections/: CMakeLists.txt  CMakeLists1.txt
cmake_learning/package_make/: CMakeLists.txt  FooBarConfig.cmake.in
cmake_learning/package_make/include/foo_bar/: foo_bar.h
google_tools/gtest_learning/: CMakeLists.txt  example_class.h  example_class_test.cpp  main.cpp
google_tools/gtest_learning/learning-gtest-master/: .gitignore  .travis.yml  README.md
google_tools/protobuf_learninig/: CMakeLists.txt  main.cpp  student.pb.cc  student.pb.h  student.proto
google_tools/protobuf_learninig/cmake-protobuf-example-master/: README.md
(+357 files in other folders)
